--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>CobWeb GIS - Contact Us</title>
     <link
-      rel="shortcut icon "
+      rel="shortcut icon"
       href="/resources/images/cobweb-svgrepo-com (1).svg"
     />
     <link rel="stylesheet" href="/style.css" />
@@ -24,23 +24,25 @@
     <div class="wrapper">
       <!-- Header -->
       <header class="header">
-        <nav class="nav">
-          <i class="uil uil-bars navOpenBtn"></i>
+        <nav class="nav" role="navigation" aria-label="Main Navigation">
+          <button class="navOpenBtn" aria-label="Open Navigation">
+            <i class="uil uil-bars"></i>
+          </button>
           <a href="/index.html">
             <img
               class="img-logo"
               src="/resources/images/cobweb-svgrepo-com (3).png"
-              alt="Hompage"
+              alt="Homepage"
             />
           </a>
-          <!-- <a href="/layout/home.html" class="logo">CobWeb GIS</a> -->
           <ul class="nav-links">
-            <i class="uil uil-times navCloseBtn"></i>
+            <button class="navCloseBtn" aria-label="Close Navigation">
+              <i class="uil uil-times"></i>
+            </button>
             <li><a href="/pages/map.html">Map</a></li>
             <li><a href="/pages/about.html">About</a></li>
             <li><a href="/pages/contact.html">Contact</a></li>
           </ul>
-          <button class="button" id="form-open">Account</button>
         </nav>
       </header>
 
@@ -56,8 +58,11 @@
                 Have questions or need assistance with CobWeb GIS? We're here to
                 help!
               </p>
-              <p>Email: info@cobwebgis.com</p>
-              <p>Phone: +1 234 567 890</p>
+              <p>
+                Email:
+                <a href="mailto:info@cobwebgis.com">info@cobwebgis.com</a>
+              </p>
+              <p>Phone: <a href="tel:+1234567890">+1 234 567 890</a></p>
             </div>
           </div>
 
@@ -87,7 +92,10 @@
 
       <!-- Footer -->
       <footer class="footer">
-        <p>©CobWeb GIS 2023 info@cobwebgis.com</p>
+        <p>
+          © CobWeb GIS 2023
+          <a href="mailto:info@cobwebgis.com">info@cobwebgis.com</a>
+        </p>
       </footer>
     </div>
 
