--- a/pages/map.html
+++ b/pages/map.html
@@ -164,9 +164,9 @@
               >
                 <img src="/resources/images/zoom_out.svg" alt="Zoom Out" />
               </button>
-              <button onclick="saveFeatures()">Save</button>
-              <button onclick="loadFeatures()">Load</button>
-              <button onclick="clearSavedFeatures()">Clear</button>
+              <button onclick="saveFeatures()"><img src="/resources/images/save.svg" alt="Save Measurement" /></button>
+              <button onclick="loadFeatures()"><img src="/resources/images/reload.svg" alt="Load Measurement" /></button>
+              <button onclick="clearSavedFeatures()"><img src="/resources/images/clear.svg" alt="Clear Measurement" /></button>
             </div>
           </div>
         </div>
